@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.550 2005/12/26 06:57:47 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.551 2005/12/26 19:26:26 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
@@ -9,6 +9,8 @@
   src/GLIPortage.py:
   exclude packages already in chroot vdb from binary deplist
   chroot to use best_version for chroot's vdb
+  src/runtimedeps.py:
+  accept ROOT via commandline instead of env
 
   25 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/runtimedeps.py:
